python/rregadmin/hive/value_cell_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^value_cell_.* -o value_cell_wrapper.py value_cell_wrapper.xml'
from ctypes import *

from rregadmin.hive.types_wrapper import ValueCell
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
from rregadmin.util.value_wrapper import guint8
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Cell
from rregadmin.hive.types_wrapper import guint32
from rregadmin.util.ustring_list_wrapper import ustring


# ../../../rregadmin/hive/value_cell.h 54
value_cell_alloc = _libraries['librregadmin.so.1'].value_cell_alloc
value_cell_alloc.restype = POINTER(ValueCell)
# value_cell_alloc(hdesc, p, data, data_length)
value_cell_alloc.argtypes = [POINTER(Hive), offset, POINTER(guint8), c_int]
value_cell_alloc.__doc__ = \
"""ValueCell * value_cell_alloc(Hive * hdesc, offset p, unknown * data, int data_length)
../../../rregadmin/hive/value_cell.h:54"""
# ../../../rregadmin/hive/value_cell.h 59
value_cell_unalloc = _libraries['librregadmin.so.1'].value_cell_unalloc
value_cell_unalloc.restype = gboolean
# value_cell_unalloc(vc)
value_cell_unalloc.argtypes = [POINTER(ValueCell)]
value_cell_unalloc.__doc__ = \
"""gboolean value_cell_unalloc(ValueCell * vc)
../../../rregadmin/hive/value_cell.h:59"""
# ../../../rregadmin/hive/value_cell.h 65
value_cell_from_cell = _libraries['librregadmin.so.1'].value_cell_from_cell
value_cell_from_cell.restype = POINTER(ValueCell)
# value_cell_from_cell(p)
value_cell_from_cell.argtypes = [POINTER(Cell)]
value_cell_from_cell.__doc__ = \
"""ValueCell * value_cell_from_cell(Cell * p)
../../../rregadmin/hive/value_cell.h:65"""
# ../../../rregadmin/hive/value_cell.h 71
value_cell_to_cell = _libraries['librregadmin.so.1'].value_cell_to_cell
value_cell_to_cell.restype = POINTER(Cell)
# value_cell_to_cell(nk)
value_cell_to_cell.argtypes = [POINTER(ValueCell)]
value_cell_to_cell.__doc__ = \
"""Cell * value_cell_to_cell(ValueCell * nk)
../../../rregadmin/hive/value_cell.h:71"""
# ../../../rregadmin/hive/value_cell.h 80
value_cell_is_valid = _libraries['librregadmin.so.1'].value_cell_is_valid
value_cell_is_valid.restype = gboolean
# value_cell_is_valid(nk)
value_cell_is_valid.argtypes = [POINTER(ValueCell)]
value_cell_is_valid.__doc__ = \
"""gboolean value_cell_is_valid(unknown * nk)
../../../rregadmin/hive/value_cell.h:80"""
# ../../../rregadmin/hive/value_cell.h 89
value_cell_get_data_length = _libraries['librregadmin.so.1'].value_cell_get_data_length
value_cell_get_data_length.restype = guint32
# value_cell_get_data_length(nk)
value_cell_get_data_length.argtypes = [POINTER(ValueCell)]
value_cell_get_data_length.__doc__ = \
"""guint32 value_cell_get_data_length(unknown * nk)
../../../rregadmin/hive/value_cell.h:89"""
# ../../../rregadmin/hive/value_cell.h 98
value_cell_get_data = _libraries['librregadmin.so.1'].value_cell_get_data
value_cell_get_data.restype = POINTER(guint8)
# value_cell_get_data(nk)
value_cell_get_data.argtypes = [POINTER(ValueCell)]
value_cell_get_data.__doc__ = \
"""guint8 * value_cell_get_data(ValueCell * nk)
../../../rregadmin/hive/value_cell.h:98"""
# ../../../rregadmin/hive/value_cell.h 108
value_cell_set = _libraries['librregadmin.so.1'].value_cell_set
value_cell_set.restype = gboolean
# value_cell_set(in_vc, in_data, in_data_len)
value_cell_set.argtypes = [POINTER(ValueCell), POINTER(guint8), guint32]
value_cell_set.__doc__ = \
"""gboolean value_cell_set(ValueCell * in_vc, unknown * in_data, guint32 in_data_len)
../../../rregadmin/hive/value_cell.h:108"""
# ../../../rregadmin/hive/value_cell.h 116
value_cell_debug_print = _libraries['librregadmin.so.1'].value_cell_debug_print
value_cell_debug_print.restype = None
# value_cell_debug_print(nk)
value_cell_debug_print.argtypes = [POINTER(ValueCell)]
value_cell_debug_print.__doc__ = \
"""void value_cell_debug_print(unknown * nk)
../../../rregadmin/hive/value_cell.h:116"""
# ../../../rregadmin/hive/value_cell.h 124
value_cell_get_xml_output = _libraries['librregadmin.so.1'].value_cell_get_xml_output
value_cell_get_xml_output.restype = gboolean
# value_cell_get_xml_output(in_vc, in_output)
value_cell_get_xml_output.argtypes = [POINTER(ValueCell), POINTER(ustring)]
value_cell_get_xml_output.__doc__ = \
"""gboolean value_cell_get_xml_output(unknown * in_vc, ustring * in_output)
../../../rregadmin/hive/value_cell.h:124"""
__all__ = ['value_cell_set', 'value_cell_alloc',
           'value_cell_from_cell', 'value_cell_debug_print',
           'value_cell_is_valid', 'value_cell_to_cell',
           'value_cell_unalloc', 'value_cell_get_xml_output',
           'value_cell_get_data_length', 'value_cell_get_data']
